# Mannofold

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
mannofold/: __init__.py
mannofold/analytics/: __init__.py  metrics.py  portfolio.py
mannofold/api/: __init__.py  app.py
mannofold/broker/: __init__.py  alpaca_broker.py
mannofold/contracts/: __init__.py  events.py  interfaces.py  models.py
mannofold/engine/: __init__.py  engine.py  metrics.py
mannofold/features/: __init__.py  indicators.py  pipeline.py
mannofold/feed/: __init__.py  alpaca.py  github_csv.py  historical.py  live_replay.py  sp500_universe.py  synthetic.py
mannofold/manifold/: __init__.py  _umap.py  embedding.py  model.py
mannofold/persist/: __init__.py  store.py  supabase_export.py
mannofold/signals/: __init__.py  risk.py  strategy.py
scripts/: benchmark.py  build_web_runs.py  fetch_historical.py  fund_report.py  gen_synthetic.py  optimize_strategies.py  render_animation.py  render_snapshot.py  run_backtest.py  run_local.sh  run_paper.py  sweep.py
tests/: test_alpaca.py  test_analytics.py  test_api.py  test_correctness.py  test_features.py  test_manifold.py  test_metrics.py  test_no_lookahead_all_engines.py  test_regime_recovery.py  test_store.py  test_strategy.py
vault/: Glossary.md  Home.md
vault/.obsidian/: app.json
vault/Architecture/: Architecture.md  No-Lookahead.md
vault/Decisions/: ADR-0001-stack.md  ADR-0002-deckgl-over-plotly.md  (+4 more)
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  (+1 more)
(+160 files in other folders)
